2002-06-22  Jody Goldberg <jody@gnome.org>

	* src/expr.h : support constructed ranges.
	* src/parser.y (parser_sheet_by_name) : ditto.
	* src/expr-name.c (name_refer_circular) : ditto.

	* src/expr.c (do_gnm_expr_unref) : support range_ctor and reorder to
	  produce a better jump table.
	(gnm_expr_equal) : ditto.
	(do_expr_as_string) : ditto.
	(gnm_expr_rewrite) : ditto.
	(ets_hash) : ditto.
	(ets_equal) : ditto.
	(expr_tree_sharer_share) : ditto.
	(expr_eval_real) : ditto and use gnm_expr_extract_ref.
	(gnm_expr_extract_ref) : new.

2002-06-21  Jody Goldberg <jody@gnome.org>

	* src/workbook-view.c (workbook_view_new) : add views of all existing
	  sheets.

	* src/workbook-control-component.c (wbcc_sheet_focus) : move to new
	signature.

	* src/application.c (gnumeric_application_finalize) : do not free the
	  clipboard here.  It is too late.

2002-06-21  Jody Goldberg <jody@gnome.org>

	* src/parse-util.c (parse_cell_name) : take a cellpos *

	* src/func-builtin.c (gnumeric_selection) : dummy out for now until a
	  different approach is available.

	* src/commands.c : convert to sheetview.
	  s/parent/cmd/ to make things more readable
	(cmd_selection_clear) : rename from cmd_clear_selection so that we can
	  start to group the operations that currently operate on selections.
	(cmd_selection_format) : rename from cmd_format.
	(cmd_selection_colrow_hide) : rename from cmd_colrow_hide_selection.
	(cmd_selection_outline_change) : rename from cmd_colrow_outline_change.
	(cmd_selection_group) : rename from cmd_group.
	(cmd_selection_autoformat) : rename from cmd_autoformat.
	(cmd_colrow_hide_correct_selection) : take a control.

	* src/colrow.c (cb_colrow_visibility) : selections are now part of
	  sheetview.
	(colrow_get_visiblity_toggle) : ditto.

	* src/cmd-edit.c (cmd_select_cur_row) : convert to sheetview.
	(cmd_select_cur_col) : ditto.
	(cmd_select_cur_array) : ditto.
	(cmd_select_cur_depends) : ditto.
	(cmd_select_cur_inputs) : ditto.